--- a/Projeto8(Advocacia_Senhor_lei)/index.html
+++ b/Projeto8(Advocacia_Senhor_lei)/index.html
@@ -26,12 +26,10 @@
         <h3>Sobre nós</h3>
         <p>Há 30 anos atuando em diversas áreas legais sempre com princípios e valores. Temos 
            compromisso com a verdade e focamos nos interesses de nossos clientes.</p>   
-        <div class="galeria">
-           <figure>
-            <img src="img/img1.jpg" alt="Advogado com caneta nas mãos assinado processos.">
-            <img src="img/img2.jpg" alt="Constituição de leis  e martelo de usado por um juiz em audiencias.">
-            <img src="img/img3.jpg" alt="Advogado segurando e lendo um processo.">
-            </figure>
+        <div >
+           <img  class="galeria" src="img/img1.jpg" alt="Advogado com caneta nas mãos assinado processos.">
+            <img class="galeria" src="img/img2.jpg" alt="Constituição de leis  e martelo de usado por um juiz em audiencias.">
+            <img class="galeria" src="img/img3.jpg" alt="Advogado segurando e lendo um processo.">
         </div>
             <p><span>Nosso compromisso é com você</span></p>
     </div>
